# Little-Engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
data/: config.json
data/CameraMovement/: scene.json
data/DiffuseShading/: scene.json
samples/: CMakeLists.txt
samples/CameraMovement/: CMakeLists.txt  CameraMovement.cpp  CameraMovement.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  main.cpp
samples/DiffuseShading/: CMakeLists.txt  DiffuseShading.cpp  DiffuseShading.hpp  main.cpp
shaders/: CameraMovement.vert  DiffuseShading.frag  model.frag  model.vert
source/: App.cpp  App.hpp  Base.cpp  Base.hpp  BaseApp.cpp  BaseApp.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Constants.hpp  Debug.hpp  Device.cpp  Device.hpp  FileManager.cpp  Instance.cpp  Instance.hpp  SwapChain.cpp  SwapChain.hpp  Tools.cpp  Tools.hpp  Utilities.cpp  Utilities.hpp  Window.cpp  Window.hpp  main.cpp
source/Mesh/: Mesh.cpp  Mesh.hpp
source/assets/: AssetsManager.cpp  AssetsManager.hpp
source/config/: Cli.cpp  Cli.hpp  Config.cpp  Config.hpp
source/entity/: Entity.cpp  Entity.hpp
source/extras/: json.hpp
source/fileManager/: FileManager.cpp  FileManager.hpp
source/files/: File.cpp  File.hpp  FilesManager.cpp  FilesManager.hpp
source/graphics/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp
source/input/: InputSystem.cpp  InputSystem.hpp
tools/: compileShaders.py
(+76 files in other folders)
